log_output/gke/manifests/06-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: log-output-route
spec:
  parentRefs:
  - name: log-output-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /log
    backendRefs:
    - name: log-output-svc 
      port: 80
